[XForms] Handle empty instances. Bug 321876, r=aaronr+smaug